--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -430,11 +430,49 @@ body {
   body {
     font-size: 15px;
   }
-  .profile-visit__list li {
-    width: 50%;
-  }
   .profile-visit__list {
-    padding: 0 5px;
+    margin: -20px 0;
+    padding-top: 20px;
+  }
+  .profile-visit__list li {
+    width: 100%;
+    padding: 20px 0;
+    &:before,
+    &:after {
+      content: '';
+      display: block;
+      position: absolute;
+      left: 50%;
+      width: 3px;
+      height: 100px;
+      background-color: #fff;
+      border-radius: 3px;
+      background-color: #ebebeb;
+    }
+    &:before {
+      top: 10px;
+      transform: translate(-50%, -100%);
+    }
+    &:after {
+      bottom: 10px;
+      transform: translate(-50%, 100%);
+    }
+    &:first-child {
+      &:before {
+        display: none;
+      }
+    }
+    &:last-child {
+      &:after {
+        display: none;
+      }
+    }
+  }
+  .profile-visit__image:after, .profile-visit__image:before {
+    display: none;
+  }
+  .profile-visit__image {
+    margin: 0 auto 5px auto !important;
   }
   .btn {
     margin: 0 auto;
